[project]
name = "ComfyUI-prompt-filter-nodes"
description = "These nodes identifies specific content in the input prompt (each content occupies only one line) based on txt files containing predefined content that needs to be recognized. It then adds a special prefix (as a marker) to the identified content and inserts it back into the original prompt."
version = "1.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/GHOSTLXH/ComfyUI-prompt-filter-nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ghostlxh"
DisplayName = "ComfyUI-prompt-filter-nodes"
Icon = ""
